fix text box sizing on mobile

--- a/Brutus/public/stylesheets/general.css
+++ b/Brutus/public/stylesheets/general.css
@@ -1,3 +1,8 @@
+body {
+    padding: 0;
+    width: 100%;
+}
+
 .search-body {
     height: 1400px;
     padding: 30px 0px 0px 0px;
